// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-stacked-bar-widget Propery handling should handle data attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
>
  
  <as-widget-header />
  <svg>
    <g
      class="plot"
    >
      <g
        class="column"
      >
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="40%"
          width="30"
          x="0"
          y="60%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="5%"
          width="30"
          x="0"
          y="55%"
        />
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="0"
          y="35%"
        />
      </g>
      <g
        class="column"
      >
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="35"
          y="80%"
        />
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="100%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="110%"
        />
      </g>
    </g>
  </svg>
  <as-y-axis
    from="0"
    to="30"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle description attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  description="fake-description-attr"
>
  
  <as-widget-header
    subheader="fake-description-attr"
  />
  <svg>
    <g
      class="plot"
    >
      <g
        class="column"
      >
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="40%"
          width="30"
          x="0"
          y="60%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="5%"
          width="30"
          x="0"
          y="55%"
        />
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="0"
          y="35%"
        />
      </g>
      <g
        class="column"
      >
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="35"
          y="80%"
        />
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="100%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="110%"
        />
      </g>
    </g>
  </svg>
  <as-y-axis
    from="0"
    to="30"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle heading attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  heading="fake-heading-attr"
>
  
  <as-widget-header
    header="fake-heading-attr"
  />
  <svg>
    <g
      class="plot"
    >
      <g
        class="column"
      >
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="40%"
          width="30"
          x="0"
          y="60%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="5%"
          width="30"
          x="0"
          y="55%"
        />
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="0"
          y="35%"
        />
      </g>
      <g
        class="column"
      >
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="35"
          y="80%"
        />
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="100%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="110%"
        />
      </g>
    </g>
  </svg>
  <as-y-axis
    from="0"
    to="30"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle showLegend attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  show-legend="false"
>
  
  <as-widget-header />
  <svg>
    <g
      class="plot"
    >
      <g
        class="column"
      >
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="40%"
          width="30"
          x="0"
          y="60%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="5%"
          width="30"
          x="0"
          y="55%"
        />
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="0"
          y="35%"
        />
      </g>
      <g
        class="column"
      >
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="35"
          y="80%"
        />
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="100%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="110%"
        />
      </g>
    </g>
  </svg>
  <as-y-axis
    from="0"
    to="30"
  />
  
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle valuesInfo attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
>
  
  <as-widget-header />
  <svg>
    <g
      class="plot"
    >
      <g
        class="column"
      >
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="40%"
          width="30"
          x="0"
          y="60%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="5%"
          width="30"
          x="0"
          y="55%"
        />
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="0"
          y="35%"
        />
      </g>
      <g
        class="column"
      >
        <rect
          fill="rgba(20, 20, 200, 0.8)"
          height="20%"
          width="30"
          x="35"
          y="80%"
        />
        <rect
          fill="rgba(200, 20, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="100%"
        />
        <rect
          fill="rgba(20, 200, 20, 0.8)"
          height="10%"
          width="30"
          x="35"
          y="110%"
        />
      </g>
    </g>
  </svg>
  <as-y-axis
    from="0"
    to="30"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;
